# novi-plugin-host

./: .flake8  .gitignore  README.md  pyproject.toml
src/novi_plugin_host/: __init__.py  __main__.py  config.py  entry.py  misc.py
